Fix extra space in button icon

--- a/src/css/items/button.scss
+++ b/src/css/items/button.scss
@@ -55,7 +55,7 @@ $borderRadius: 6.25rem;
 
   .icon {
     display: inline-block;
-    margin: 0 0.5rem;
+    margin: 0 0.5rem 0 0;
   }
 
   .sub-text {
